# fojin

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  scripts_shared.py
backend/eval/: __init__.py  run_eval.py  scorer.py  test_set.json
backend/scripts/: analyze_geo_distribution.py  apply_korean_hanja.py  audit_enrichable.py  audit_entity_languages.py  audit_entity_types_wikidata.py  audit_noise_entities.py  audit_persons_detail.py  audit_remaining.py  audit_unknown_persons.py  backfill_address_regeo.py  backfill_person_coords.py  backfill_person_coords_v2.py  backfill_person_place_coords.py  backfill_person_wikidata_coords.py  build_alignments.py  check_dynasty_gaps.py  check_geo_gaps.py  cleanup_dynasty_coords.py  cleanup_final.py  cleanup_noise_entities.py  cleanup_noise_v2.py  cleanup_round3.py  cleanup_round4.py  cleanup_secular_scholars.py  convert_korean_strict.py  delete_secular_by_desc.py  delete_secular_persons.py  download_84000_data.py  download_sc_data.py  embedding_server.py  enrich_active_in_places.py  enrich_dynasty_coords.py  enrich_dynasty_coords_v2.py  enrich_from_json.py  enrich_manual_coords.py  enrich_name_zh_wikidata.py  enrich_wikidata_geo.py  enrich_zh_labels_desc.py  export_korean_names.py  export_qids.py  (+83 more)
(+354 files in other folders)
